<resources>
    <string name="app_name">Fabflix Mobile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="action_previous">PREVIOUS</string>
    <string name="action_next">NEXT</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="action_movie_list">Movie List</string>
    <string name="action_main">MAIN</string>
    <string name="action_search_movie">SEARCH</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >2 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fabflix">Fabflix</string>
    <string name="default_movie_title">movie title</string>
    <string name="default_movie_year">movie year</string>
    <string name="default_movie_director">movie director</string>
    <string name="default_movie_star">movie star</string>
</resources>